--- a/templates/conventions/recapitulatif.html
+++ b/templates/conventions/recapitulatif.html
@@ -48,7 +48,7 @@
                                             </a>
                                         </div>
                                         <div class="table--limited-height">
-                                            {% include "common/display_field_if_exists.html" with label="Nom du programme" value=programme.nom %}
+                                            {% include "common/display_field_if_exists.html" with label="Nom du programme" value=programme.nom object_field="lot__uuid__"|add:lot_uuid %}
                                             {% include "common/display_field_if_exists.html" with label="Financement" value=lot.financement %}
                                             {% include "common/display_field_if_exists.html" with label="Ville" value=programme.ville %}
                                             {% include "common/display_field_if_exists.html" with label="Nombre de logements à conventionner" value=lot.nb_logements %}
