--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -24,6 +24,7 @@
 
         <link rel="stylesheet" href="{% static "dsfr/dist/dsfr/dsfr.min.css" %}">
         <link rel="stylesheet" href="{% static "css/main.css" %}">
+        <link rel="stylesheet" href="{% static "css/dropdown-menu.css" %}">
         <link rel="stylesheet" href="{% static "css/step_progressbar.css" %}">
         <link rel="stylesheet" href="{% static "css/user_feedback.css" %}">
         {% block css_extras %}{% endblock %}
