manage the responsivity

--- a/templates/settings/bailleurs.html
+++ b/templates/settings/bailleurs.html
@@ -8,17 +8,17 @@
     <div class="fr-container-fluid">
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters fr-py-5w fr-mb-1w">
-                <div class='apilos-settings--justify'>
+                <div class='fr-col-12 fr-col-md-4 fr-col-lg-3'>
                     {% include 'settings/common/side_menu.html' with active_menu='bailleurs' %}
-                    <div>
-                        <h4>Gérer ou visualiser vos bailleurs</h4>
-                        <p>
-                            En tant que Bailleur, vous voyez la liste de vos bailleurs. Vous pouvez modifier les paramètres du bailleurs
-                        </p>
-                        <p>
-                            En tant qu'Instructeur, vous voyez la liste des bailleur qui ont des programmes attaché à vos administrations
-                        </p>
-                    </div>
+                </div>
+                <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
+                    <h4>Gérer ou visualiser vos bailleurs</h4>
+                    <p>
+                        En tant que Bailleur, vous voyez la liste de vos bailleurs. Vous pouvez modifier les paramètres du bailleurs
+                    </p>
+                    <p>
+                        En tant qu'Instructeur, vous voyez la liste des bailleur qui ont des programmes attaché à vos administrations
+                    </p>
                 </div>
             </div>
         </div>
