--- a/templates/settings/user_profile.html
+++ b/templates/settings/user_profile.html
@@ -8,21 +8,21 @@
     <div class="fr-container-fluid">
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters fr-py-5w fr-mb-1w">
-                <div class='apilos-settings--justify'>
+                <div class='fr-col-12 fr-col-md-4 fr-col-lg-3'>
                     {% include 'settings/common/side_menu.html' with active_menu='profile' %}
-                    <div>
-                        <h4>Gestion de votre profil</h4>
-                        <p>
-                            Ici vous pouvez modifier votre profil, c'est à dire:
-                        </p>
-                        <ul>
-                            <li>votre adresse email</li>
-                            <li>votre nom</li>
-                            <li>votre mot de passe</li>
-                            <li>...</li>
-                        </ul>
-                        <p>Le nom d'utilisateur n'est pas modifiable</p>
-                    </div>
+                </div>
+                <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
+                    <h4>Gestion de votre profil</h4>
+                    <p>
+                        Ici vous pouvez modifier votre profil, c'est à dire:
+                    </p>
+                    <ul>
+                        <li>votre adresse email</li>
+                        <li>votre nom</li>
+                        <li>votre mot de passe</li>
+                        <li>...</li>
+                    </ul>
+                    <p>Le nom d'utilisateur n'est pas modifiable</p>
                 </div>
             </div>
         </div>
