--- a/templates/settings/administrations.html
+++ b/templates/settings/administrations.html
@@ -8,18 +8,18 @@
     <div class="fr-container-fluid">
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters fr-py-5w">
-                <div class='apilos-settings--justify'>
+                <div class='fr-col-12 fr-col-md-4 fr-col-lg-3'>
                     {% include 'settings/common/side_menu.html' with active_menu='administrations' %}
-                    <div>
-                        <h4>Gérer ou visualiser vos administrations</h4>
-                        <p>
-                            En tant qu'Instructeur, vous voyez la liste de vos administrations. (si vous en êtes l'administrateur),
-                            vous pouvez modifier les paramètres tel que la ville de signature ou le nombre d'examplaire
-                        </p>
-                        <p>
-                            En tant que Bailleur, vous voyez la liste des administrations attaché aux programme de votre bailleur
-                        </p>
-                    </div>
+                </div>
+                <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
+                    <h4>Gérer ou visualiser vos administrations</h4>
+                    <p>
+                        En tant qu'Instructeur, vous voyez la liste de vos administrations. (si vous en êtes l'administrateur),
+                        vous pouvez modifier les paramètres tel que la ville de signature ou le nombre d'examplaire
+                    </p>
+                    <p>
+                        En tant que Bailleur, vous voyez la liste des administrations attaché aux programme de votre bailleur
+                    </p>
                 </div>
             </div>
         </div>
