--- a/templates/settings/users.html
+++ b/templates/settings/users.html
@@ -8,22 +8,22 @@
     <div class="fr-container-fluid">
         <div class="fr-container">
             <div class="fr-grid-row fr-grid-row--gutters fr-py-5w fr-mb-1w">
-                <div class='apilos-settings--justify'>
+                <div class='fr-col-12 fr-col-md-4 fr-col-lg-3'>
                     {% include 'settings/common/side_menu.html' with active_menu='users' %}
-                    <div>
-                        <h4>Vos collaborateurs</h4>
-                        <p>
-                            Ici on liste les utilisateurs de vos bailleurs si vous êtes un bailleur, de vos administrations si vous êtes instructeur.
-                            De plus, si vous êtes administrateur d'une ou plusieurs entité, pour ces entité, il vous sera possible de : :
-                        </p>
-                        <ul>
-                            <li>ajouter un utilisateur</li>
-                            <li>modifier un utilisateur</li>
-                            <li>supprimer un utilisateur (solf delete à prévoir)</li>
-                            <li>nommer un administarteur ou supprimer ce droit d'administration</li>
-                        </ul>
-                        <p>Si vous n'êtes pas administrateur, alors vous n'avez que le droit de voir la liste de vos collaborateurs</p>
-                    </div>
+                </div>
+                <div class='fr-col-12 fr-col-md-8 fr-col-lg-9 fr-pl-md-3w'>
+                    <h4>Vos collaborateurs</h4>
+                    <p>
+                        Ici on liste les utilisateurs de vos bailleurs si vous êtes un bailleur, de vos administrations si vous êtes instructeur.
+                        De plus, si vous êtes administrateur d'une ou plusieurs entité, pour ces entité, il vous sera possible de : :
+                    </p>
+                    <ul>
+                        <li>ajouter un utilisateur</li>
+                        <li>modifier un utilisateur</li>
+                        <li>supprimer un utilisateur (solf delete à prévoir)</li>
+                        <li>nommer un administarteur ou supprimer ce droit d'administration</li>
+                    </ul>
+                    <p>Si vous n'êtes pas administrateur, alors vous n'avez que le droit de voir la liste de vos collaborateurs</p>
                 </div>
             </div>
         </div>
