--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -22,7 +22,7 @@
                     {% elif request.session.is_instructeur or request.user.is_superuser %}
                         <h2 class="fr-mb-3w">Bienvenue dans votre espace Instructeur</h2>
                     {% else %}
-                        <p class="fr-mb-3w">Votre profile n'est pas bien configuré, merci de vous rapprocher de votre instructeur</p>
+                        <p class="fr-mb-3w">Votre profil n'est pas bien configuré, merci de vous rapprocher de votre instructeur</p>
                     {% endif %}
                 </div>
             </div>
