--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -85,7 +85,7 @@
                                                     </a>
                                                 {% endif %}
                                                 <a href="{% url 'settings:profile' %}">
-                                                    <span class="fr-fi-user-line fr-mr-1w" aria-hidden="true"></span>Profile
+                                                    <span class="fr-fi-user-line fr-mr-1w" aria-hidden="true"></span>Profil
                                                 </a>
                                                 <a href="{% url 'settings:index' %}">
                                                     <span class="fr-fi-equalizer-line fr-mr-1w" aria-hidden="true"></span>Paramètres
