--- a/templates/settings/common/side_menu.html
+++ b/templates/settings/common/side_menu.html
@@ -5,7 +5,7 @@
             <div class="fr-sidemenu__title">Gérer vos paramètres</div>
             <ul class="fr-sidemenu__list">
                 <li class="fr-sidemenu__item{% if active_menu == 'profile' %} fr-sidemenu__item--active{% endif %}">
-                    <a class="fr-sidemenu__link" href="{% url 'settings:profile' %}" target="_self" {% if active_menu == 'profile' %}aria-current="page"{% endif %}>Votre Profile</a>
+                    <a class="fr-sidemenu__link" href="{% url 'settings:profile' %}" target="_self" {% if active_menu == 'profile' %}aria-current="page"{% endif %}>Votre profil</a>
                 </li>
                 <li class="fr-sidemenu__item{% if active_menu == 'users' %} fr-sidemenu__item--active{% endif %}">
                     <a class="fr-sidemenu__link" href="{% url 'settings:users' %}" target="_self" {% if active_menu == 'users' %}aria-current="page"{% endif %}>Utilisateurs</a>
