--- a/templates/settings/user_profile.html
+++ b/templates/settings/user_profile.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block page_title %}Mon Profile - APiLos{% endblock%}
+{% block page_title %}Mon Profil - APiLos{% endblock%}
 
 {% block content %}
     <div class="fr-container-fluid">
