--- a/templates/settings/users.html
+++ b/templates/settings/users.html
@@ -15,7 +15,7 @@
                     <h4>Vos collaborateurs</h4>
                     <p>
                         Ici on liste les utilisateurs de vos bailleurs si vous êtes un bailleur, de vos administrations si vous êtes instructeur.
-                        De plus, si vous êtes administrateur d'une ou plusieurs entité, pour ces entité, il vous sera possible de : :
+                        De plus, si vous êtes administrateur d'une ou plusieurs entité, pour ces entité, il vous sera possible de :
                     </p>
                     <ul>
                         <li>ajouter un utilisateur</li>
