--- a/templates/common/display_field_if_exists.html
+++ b/templates/common/display_field_if_exists.html
@@ -1,3 +1,5 @@
+{% load custom_filters %}
+
 {% if object_field %}
     {% if value or comments|has_comments:object_field %}
         <div class="block--row-strech" id="{{object_field}}_div">
