--- a/templates/conventions/annexes.html
+++ b/templates/conventions/annexes.html
@@ -26,10 +26,10 @@
 
                         <h4>Annexes associés aux logements exclues du calcul de la surface utile</h4>
 
-                        {% if editable %}
+                        <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
                             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='annexes' upform=upform  what='annexes'%}
                             <hr class="fr-col-12 fr-my-3w">
-                        {% endif %}
+                        </div>
 
                         {% for error in import_warnings %}
                             <p id="text-input-error-desc-error" class="fr-error-text">
