--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -42,10 +42,10 @@
 
                         <h4 class="fr-mb-1w">EDD Simplifié</h4>
 
-                        {% if editable %}
+                        <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
                             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='logements_edd' upform=upform  what="logements pour l'EDD simplifié"%}
                             <hr class="fr-col-12 fr-my-3w">
-                        {% endif %}
+                        </div>
 
                         {% for error in import_warnings %}
                             <p id="text-input-error-desc-error" class="fr-error-text">
@@ -145,13 +145,13 @@
                                                         id="{{form.uuid.id_for_label}}"
                                                         name="{{form.uuid.html_name}}"
                                                         value="{{ form.uuid.value|default_if_none:'' }}">
-                                                    {% include "common/form/select_enum.html" with form_input=form.financement enum=financements parent_object_field=main_object_field %}
+                                                    {% include "common/form/select_enum.html" with form_input=form.financement enum=financements parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/input_text.html" with form_input=form.designation parent_object_field=main_object_field %}
+                                                    {% include "common/form/input_text.html" with form_input=form.designation parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/select_enum.html" with form_input=form.typologie enum=typologies parent_object_field=main_object_field %}
+                                                    {% include "common/form/select_enum.html" with form_input=form.typologie enum=typologies parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                             </tr>
                                         {% endwith %}
