--- a/templates/conventions/financement.html
+++ b/templates/conventions/financement.html
@@ -21,10 +21,10 @@
 
                         <h4>Financement : Prêts & Subventions</h4>
 
-                        {% if editable %}
+                        <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
                             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='financement' upform=upform  what='prêts' %}
                             <hr class="fr-col-12 fr-my-3w">
-                        {% endif %}
+                        </div>
 
                         {% for error in import_warnings %}
                             <p id="text-input-error-desc-error" class="fr-error-text">
@@ -77,22 +77,22 @@
                                                         id="{{form_pret.uuid.id_for_label}}"
                                                         name="{{form_pret.uuid.html_name}}"
                                                         value="{{ form_pret.uuid.value|default_if_none:'' }}">
-                                                    {% include "common/form/input_text.html" with form_input=form_pret.numero parent_object_field=main_object_field %}
+                                                    {% include "common/form/input_text.html" with form_input=form_pret.numero parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/input_date.html" with form_input=form_pret.date_octroi parent_object_field=main_object_field %}
+                                                    {% include "common/form/input_date.html" with form_input=form_pret.date_octroi parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/input_number.html" with form_input=form_pret.duree parent_object_field=main_object_field %}
+                                                    {% include "common/form/input_number.html" with form_input=form_pret.duree parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/input_number.html" with form_input=form_pret.montant step="0.01" parent_object_field=main_object_field %}
+                                                    {% include "common/form/input_number.html" with form_input=form_pret.montant step="0.01" parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/select_enum.html" with form_input=form_pret.preteur enum=preteurs parent_object_field=main_object_field %}
+                                                    {% include "common/form/select_enum.html" with form_input=form_pret.preteur enum=preteurs parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                                 <td>
-                                                    {% include "common/form/input_text.html" with form_input=form_pret.autre parent_object_field=main_object_field %}
+                                                    {% include "common/form/input_text.html" with form_input=form_pret.autre parent_object_field=main_object_field editable=editable_upload %}
                                                 </td>
                                             </tr>
                                         {% endwith %}
