--- a/templates/conventions/stationnements.html
+++ b/templates/conventions/stationnements.html
@@ -21,10 +21,10 @@
 
                         <h4>Liste des stationnements associés au lot conventionné</h4>
 
-                        {% if editable %}
+                        <div id='download_upload_block' {% if not editable %}hidden{% endif %}>
                             {% include "common/form/download_upload_form.html" with convention_uuid=convention.uuid file_type='stationnements' upform=upform  what='stationnements'%}
                             <hr class="fr-col-12 fr-my-3w">
-                        {% endif %}
+                        </div>
 
                         {% for error in import_warnings %}
                             <p id="text-input-error-desc-error" class="fr-error-text">
