--- a/templates/conventions/edd.html
+++ b/templates/conventions/edd.html
@@ -120,14 +120,7 @@
                                 <thead>
                                     <tr>
                                         {% if convention.statut != 'BROUILLON' %}
-                                            <th scope="col">
-                                                <div class="content__icons content__icons--darkgrey">
-                                                    <svg role="img" xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewbox="0 0 24 24" aria-labelledby="chatIconTitle">
-                                                        <title id="chatIconTitle">Comments</title>
-                                                        <path d="M8.82388455,18.5880577 L4,21 L4.65322944,16.4273939 C3.00629211,15.0013 2,13.0946628 2,11 C2,6.581722 6.4771525,3 12,3 C17.5228475,3 22,6.581722 22,11 C22,15.418278 17.5228475,19 12,19 C10.8897425,19 9.82174472,18.8552518 8.82388455,18.5880577 Z"></path>
-                                                    </svg>
-                                                </div>
-                                            </th>
+                                            {% include 'common/utils/comments_header.html' with comment_prefix='logement_edd__uuid__' header_id='header_icon_logement_edd' %}
                                         {% endif %}
                                         <th scope="col">Financement {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
                                         <th scope="col">Désignation {% if formset.total_form_count %}{% include "common/mandatory_field_star.html" %}{% endif %}</th>
